@@ -7,6 +7,7 @@ New features:
 		* Invalidate the calculated column if one of the variable columns was deleted
 		* In "Functions Values" dialog highlight the variable column combobox red if the variable column was deleted in the project
 		* In "Functions Values" dialog don't allow to select columns to be calculated as variable columns (avoid circular dependencies)
+	* [spreadsheet] when pasting data into empty columns, automatically convert their type to the type of the data to be pasted
 	* BUG 406805 - support für directory structures in ROOT files
 	* Automatically update curves if a data column deleted before was re-added again (during the import or manually)
 	* When auto-scaling in the plot take also the error bars into account, if available
